--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
             pointer-events: none;
             color: rgba(255, 255, 255, 0.15);
             animation: fall linear infinite;
+            font-size: 0.8rem;
+            line-height: 1;
+        }
+        
+        /* Prevent font size scaling on mobile */
+        @media screen and (max-width: 768px) {
+            .snowflake {
+                font-size: 0.6rem;
+            }
         }
         
         @keyframes fall {
@@ -95,7 +104,6 @@
           for(let i = 0; i < 50; i++) {
               snowflakes.push({
                   left: Math.random() * 100,
-                  size: Math.random() * 0.6 + 0.4,
                   duration: Math.random() * 8 + 12,
                   delay: Math.random() * 15
               });
@@ -114,7 +122,7 @@
     <!-- Snow Effect -->
     <template x-for="(flake, index) in snowflakes" :key="index">
         <div class="snowflake" 
-             :style="`left: ${flake.left}%; top: -20px; font-size: ${flake.size}rem; animation-duration: ${flake.duration}s; animation-delay: ${flake.delay}s;`">
+             :style="`left: ${flake.left}%; top: -20px; animation-duration: ${flake.duration}s; animation-delay: ${flake.delay}s;`">
             ❄
         </div>
     </template>
