--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <template x-for="(flake, index) in snowflakes" :key="index">
         <div class="snowflake" 
              :style="`left: ${flake.left}%; top: -20px; animation-duration: ${flake.duration}s; animation-delay: ${flake.delay}s;`">
-            ❄
+            <div class="w-1 h-1 bg-white/20 rounded-full"></div>
         </div>
     </template>
 
