update: perbaiki kalimat

--- a/index.html
+++ b/index.html
@@ -208,14 +208,14 @@
         <section class="py-32 text-center" x-data="{ revealed: false }">
             <div @click="revealed = !revealed" class="cursor-pointer inline-block group relative">
                 <div x-show="!revealed" class="text-rose-200/40 text-xs letter-spacing-widest uppercase transition-all group-hover:opacity-100">
-                    Klik untuk membuka sebuah janji
+                    Satu hal yang ingin aku katakan
                 </div>
                 
                 <div x-show="revealed" x-transition:enter="transition duration-1000 opacity-0" class="glass-premium p-12 md:p-20 rounded-full animate-float">
                     <p class="font-serif text-2xl md:text-3xl italic leading-relaxed text-rose-100/90">
-                        "Aku tidak akan memintamu menjadi sempurna, karena bagiku, ketulusanmu sudah cukup untuk melengkapi seluruh duniaku."
+                        "Aku tidak ingin kita menjadi sepasang yang tak pernah salah. Aku hanya ingin kita menjadi dua orang yang tak pernah lelah untuk saling memperbaiki diri, bersama-sama."
                     </p>
-                    <div class="mt-8 text-[10px] letter-spacing-widest opacity-30 uppercase">— I promise</div>
+                    <div class="mt-8 text-[10px] letter-spacing-widest opacity-30 uppercase">— Solely yours</div>
                 </div>
             </div>
         </section>
@@ -226,7 +226,7 @@
             <p class="text-xs opacity-30 letter-spacing-widest uppercase mb-20">Untuk segala hal yang tak sanggup aku tuliskan.</p>
             
             <div class="text-[10px] opacity-20 tracking-tighter">
-                2025
+                Desember 2025
             </div>
         </footer>
 
